# matrixflow

./: .gitignore  .readthedocs.yml  LICENSE  README.md  docs.bat  pyproject.toml  test.bat  upload.bat
docs/: conf.py  errors.rst  examples.rst  index.rst  make.bat  matrix.rst  utils.rst  vector.rst
matrix/: __init__.py  base.py  errors.py  matrix.py  square_matrix.py  utils.py  vector.py
matrixflow/: __init__.py  matrix.py  vector.py
tests/: __main__.py
