[project]
name = "matrixflow"
version = "0.1.0"
authors = [
    {name = "Tom-the-Bomb", email = "me@tomthebomb.dev"}
]
description = "A basic library implementing basic matrix and vector operations"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vector", "matrix", "math"]
classifiers = [
    "Programming Language :: Python"
]

[tool.pyright]
typeCheckingMode = "strict"

[project.urls]
documentation = "https://matrixflow.readthedocs.io/en/latest/"
homepage = "https://github.com/Tom-the-Bomb/matrixflow"
repository = "https://github.com/Tom-the-Bomb/matrixflow"

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinxext-opengraph",
    "sphinx-copybutton",
]
dev = [
    "twine",
    "build",
]