[project]
name = "matrixflow"
version = "0.1.4"
authors = [
    {name = "Tom-the-Bomb", email = "me@tomthebomb.dev"}
]
description = "A rich library with implementations for mathematical matrices and vectors and their operations"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vector", "matrix", "math"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.pyright]
typeCheckingMode = "strict"

[project.urls]
documentation = "https://matrixflow.readthedocs.io/en/latest/"
homepage = "https://github.com/Tom-the-Bomb/matrixflow"
repository = "https://github.com/Tom-the-Bomb/matrixflow"
"Issue tracker" = "https://github.com/Tom-the-Bomb/matrixflow/issues/"

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinxext-opengraph",
    "sphinx-copybutton",
]
dev = [
    "twine",
    "build",
]